[gd_scene load_steps=23 format=3 uid="uid://dsf6itp1pf21l"]

[ext_resource type="Script" uid="uid://nb2kv32vytr8" path="res://conveyor_pathing.gd" id="1_feb5d"]
[ext_resource type="PackedScene" uid="uid://b433p4cjgtoxq" path="res://biscuit.tscn" id="2_feb5d"]
[ext_resource type="Script" uid="uid://7bc4aivpmago" path="res://lever.gd" id="3_7jktm"]

[sub_resource type="Environment" id="Environment_v1l5v"]
ambient_light_source = 2
ambient_light_color = Color(0.64, 0.64, 0.64, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pqt5l"]
albedo_color = Color(0.336608, 0.336608, 0.336608, 1)

[sub_resource type="BoxMesh" id="BoxMesh_choak"]
flip_faces = true
size = Vector3(12, 6, 12)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yitki"]
albedo_color = Color(0.674815, 0.674815, 0.674815, 1)

[sub_resource type="BoxMesh" id="BoxMesh_veigg"]
size = Vector3(12, 0.8, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x0m8b"]
albedo_color = Color(0.215902, 0.215902, 0.215902, 1)

[sub_resource type="BoxMesh" id="BoxMesh_8vnw3"]
size = Vector3(12, 0.1, 1.01)

[sub_resource type="PlaneMesh" id="PlaneMesh_yitki"]
size = Vector2(0.125, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0hh06"]
albedo_color = Color(0.730226, 0.186809, 8.66354e-07, 1)

[sub_resource type="BoxMesh" id="BoxMesh_7tr4t"]
size = Vector3(1.5, 0.8, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ahsco"]
size = Vector3(1.4, 1, 0.9)

[sub_resource type="Curve3D" id="Curve3D_v1l5v"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -7, 0.85, 0, 0, 0, 0, 0, 0, 0, 1, 0.85, 0),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="Curve3D" id="Curve3D_pqt5l"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 1, 0.95, 0, -4.4, 0, 0, 4.4, 0, 0, 7, 0.95, 0),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="Curve3D" id="Curve3D_choak"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 1, 0.95, 0, -0.4, 0, -0.2, 0.4, 0, 0.2, 1.7, 1, 0.8, -0.2, 0.2, 0, 0.2, -0.2, 0, 2.2, 0.8, 0.9),
"tilts": PackedFloat32Array(0, 0, 0)
}
point_count = 3

[sub_resource type="BoxShape3D" id="BoxShape3D_pqt5l"]
size = Vector3(0.1, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_yitki"]
size = Vector3(0.025, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_choak"]
height = 0.25

[sub_resource type="BoxShape3D" id="BoxShape3D_feb5d"]
size = Vector3(0.2, 1.4, 1.4)

[sub_resource type="BoxMesh" id="BoxMesh_x0m8b"]
size = Vector3(0.1, 1, 0.1)

[node name="Game" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_v1l5v")

[node name="OverheadLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, 0.482963, -0.12941, 0, 0.258819, 0.965926, 0.5, -0.836516, 0.224144, 0, 0, 0)

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(0.258819, -0.482963, 0.836516, 0, 0.866025, 0.5, -0.965926, -0.12941, 0.224144, 4.5, 3, 1.5)
fov = 45.0
size = 4.0

[node name="Factory" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
material_override = SubResource("StandardMaterial3D_pqt5l")
mesh = SubResource("BoxMesh_choak")

[node name="ConveyerBody" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
material_override = SubResource("StandardMaterial3D_yitki")
mesh = SubResource("BoxMesh_veigg")

[node name="ConveyerBelt" type="MeshInstance3D" parent="ConveyerBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
material_override = SubResource("StandardMaterial3D_x0m8b")
mesh = SubResource("BoxMesh_8vnw3")
skeleton = NodePath("../..")

[node name="PathMarker" type="MeshInstance3D" parent="ConveyerBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1, 0.46, 0)
mesh = SubResource("PlaneMesh_yitki")

[node name="RejectionBin" type="CSGCombiner3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0.4, 1)
material_override = SubResource("StandardMaterial3D_0hh06")
operation = 2
metadata/_edit_group_ = true

[node name="BinOuterCSG" type="CSGMesh3D" parent="RejectionBin"]
mesh = SubResource("BoxMesh_7tr4t")

[node name="BinInnerCSG" type="CSGMesh3D" parent="RejectionBin/BinOuterCSG"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
operation = 2
mesh = SubResource("BoxMesh_ahsco")

[node name="ConveyorPathing" type="Node3D" parent="."]
script = ExtResource("1_feb5d")

[node name="BasePath" type="Path3D" parent="ConveyorPathing"]
curve = SubResource("Curve3D_v1l5v")

[node name="Biscuit1" parent="ConveyorPathing/BasePath" instance=ExtResource("2_feb5d")]
transform = Transform3D(-4.37114e-08, 0, -0.999996, 0, 0.999996, 0, 1, 0, -4.37112e-08, -7, 0.85, 0)

[node name="Biscuit2" parent="ConveyorPathing/BasePath" instance=ExtResource("2_feb5d")]
transform = Transform3D(-4.37114e-08, 0, -0.999996, 0, 0.999996, 0, 1, 0, -4.37112e-08, -4, 0.85, 0)
progress = 3.0

[node name="Biscuit3" parent="ConveyorPathing/BasePath" instance=ExtResource("2_feb5d")]
transform = Transform3D(-4.37114e-08, 0, -0.999996, 0, 0.999996, 0, 1, 0, -4.37112e-08, -1, 0.85, 0)
progress = 6.0

[node name="AcceptedPath" type="Path3D" parent="ConveyorPathing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
curve = SubResource("Curve3D_pqt5l")

[node name="DeniedPath" type="Path3D" parent="ConveyorPathing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
curve = SubResource("Curve3D_choak")

[node name="Flap" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.9, 1.8, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Flap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_pqt5l")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Flap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh = SubResource("BoxMesh_yitki")

[node name="HingeJoint" type="HingeJoint3D" parent="Flap"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.19209e-07, 0)
node_a = NodePath("..")
angular_limit/enable = true
angular_limit/lower = -0.0872665

[node name="Lever" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5)
script = ExtResource("3_7jktm")

[node name="BaseMesh" type="MeshInstance3D" parent="Lever"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_choak")

[node name="ClickableArea" type="Area3D" parent="Lever"]
collision_mask = 0
monitoring = false
monitorable = false

[node name="Shape" type="CollisionShape3D" parent="Lever/ClickableArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.98023e-08, 0.7, 0)
shape = SubResource("BoxShape3D_feb5d")

[node name="Handle" type="Node3D" parent="Lever"]

[node name="Mesh" type="MeshInstance3D" parent="Lever/Handle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("BoxMesh_x0m8b")
skeleton = NodePath("../..")

[connection signal="changed" from="ConveyorPathing" to="Lever" method="_on_conveyor_pathing_changed"]
[connection signal="input_event" from="Lever/ClickableArea" to="Lever" method="_on_clickable_area_input_event"]
